# Node-Core

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
core_service/: CMakeLists.txt
core_service/src/: blockserver.cpp  blockserver.h  core_service.h  core_service_libevent.cpp  core_service_parse_settings.cpp  core_service_print_config.cpp  main.cpp  version.h.in
libs/: CMakeLists.txt
libs/curl_pp/: CMakeLists.txt
libs/curl_pp/include/: curl_pp.hpp
libs/curl_pp/src/: curl_pp.cpp
libs/moodycamel/: CMakeLists.txt
libs/rapidjson/: CMakeLists.txt
libs/xxhash/: CMakeLists.txt
metalibs/: CMakeLists.txt
metalibs/blockchain/: CMakeLists.txt
metalibs/blockchain/include/: block.h  blockchain.h  statics.hpp  transaction.h
metalibs/blockchain/src/: approve_block.cpp  approve_record.cpp  block.cpp  block_chain_controller.cpp  blockchain.cpp  blockchain_make_new_block.cpp  chain.h  common_block.cpp  common_wallet.cpp  controller.cpp  controller.hpp  controller_local_chain.cpp  controller_process_requests.cpp  core_controller.cpp  core_controller.hpp  decentralized_application_wallet.cpp  rejected_block.cpp  rejected_tx.cpp  transaction.cpp  wallet.cpp  wallet.h
metalibs/crypto_lib/: CMakeLists.txt
metalibs/crypto_lib/include/: open_ssl_decor.h  open_ssl_decor_template_realization.hpp
metalibs/crypto_lib/src/: keccak.cpp  keccak.h  open_ssl_decor.cpp
metalibs/help_lib/: CMakeLists.txt  help_lib.hpp
metalibs/meta_block/: CMakeLists.txt
metalibs/meta_block/include/: meta_block.h
metalibs/meta_block/src/: approve_block_get_txs.cpp  approve_block_make.cpp  approve_block_parse.cpp  block.cpp  common_block_get.cpp  common_block_parse.cpp  rejected_block_get.cpp  rejected_block_make.cpp  rejected_block_parse.cpp
metalibs/meta_chain/: CMakeLists.txt
metalibs/meta_chain/include/: meta_chain.h
metalibs/meta_chain/src/: blockchain.cpp  can_apply_common_block.cpp  can_apply_forging_block.cpp  can_apply_state_block.cpp  interface_functions.cpp  make_common_block.cpp  make_forging_block.cpp  make_forging_block_coin_reward.cpp  make_forging_block_get_node_stats.cpp  make_forging_block_get_wallet_stats.cpp  make_forging_block_node_reward.cpp  make_forging_block_random_reward.cpp  make_forging_block_wallet_reward.cpp  make_state_block.cpp  make_statistics_block.cpp  try_apply_block.cpp
metalibs/meta_connections/: CMakeLists.txt
metalibs/meta_connections/include/: meta_connections.hpp
metalibs/meta_connections/src/: cores_connections.cpp  cores_send.cpp  cores_sync.cpp
metalibs/meta_constants/: CMakeLists.txt  meta_constants.hpp
metalibs/meta_core/: CMakeLists.txt
metalibs/meta_core/include/: blockchain.h
metalibs/meta_core/src/: block_chain_controller.cpp  controller.cpp  controller.hpp  controller_actualize_chain.cpp  controller_add_pack_to_queue.cpp  controller_apply_block_chain.cpp  controller_blocks.cpp  controller_check_online_nodes.cpp  controller_main_loop.cpp  controller_process_requests.cpp  controller_public_interface.cpp  controller_read_and_apply_local_chain.cpp  controller_try_make_block.cpp  controller_write_block.cpp
metalibs/meta_crypto/: CMakeLists.txt
metalibs/meta_crypto/include/: meta_crypto.h  meta_crypto_template_realization.hpp
metalibs/meta_crypto/src/: open_ssl_decor.cpp
metalibs/meta_log/: CMakeLists.txt
metalibs/meta_log/include/: meta_log.hpp
metalibs/meta_log/src/: meta_log.cpp
metalibs/meta_network/: CMakeLists.txt
metalibs/meta_network/include/: meta_client.h  meta_server.h
metalibs/meta_network/src/: meta_client.cpp  meta_client_connection.cpp  meta_client_connection_response.cpp  meta_common.h  meta_server.cpp  meta_server_connection.cpp  meta_server_connection_request.cpp  meta_server_connection_write.cpp
metalibs/meta_pool/: CMakeLists.txt
metalibs/meta_pool/include/: meta_pool.hpp
metalibs/meta_pool/src/: thread_pool.cpp
metalibs/meta_transaction/: CMakeLists.txt
metalibs/meta_transaction/include/: meta_transaction.h
metalibs/meta_transaction/src/: approve_record.cpp  approve_record_parse.cpp  rejected_tx.cpp  transaction.cpp  transaction_constructors.cpp  transaction_parse.cpp
metalibs/meta_wallet/: CMakeLists.txt
metalibs/meta_wallet/include/: meta_wallet.h
metalibs/meta_wallet/src/: common_wallet.cpp  common_wallet_apply_delegates.cpp  common_wallet_get.cpp  common_wallet_initialize.cpp  common_wallet_register_node.cpp  common_wallet_serialize.cpp  common_wallet_state_trust.cpp  common_wallet_try_apply_method.cpp  common_wallet_try_delegate.cpp  common_wallet_try_undelegate.cpp  wallet.cpp  wallet_map.cpp
metalibs/mhcurl/: CMakeLists.txt
metalibs/mhcurl/include/: mhcurl.hpp
metalibs/mhcurl/src/: mhcurl.cpp
metalibs/net_io/: CMakeLists.txt
metalibs/net_io/include/: http_io_data.hpp  io_service.hpp  meta_client.h  meta_common.h  meta_http_server.h  meta_server.h  socket_client.hpp  socket_io_data.hpp  socket_server.hpp
metalibs/net_io/src/: http_io_data.cpp  io_service.cpp  meta_client.cpp  meta_http_server.cpp  meta_server.cpp  socket_client.cpp  socket_io_data.cpp  socket_server.cpp
metalibs/thread_pool/: CMakeLists.txt
metalibs/thread_pool/include/: thread_pool.hpp
metalibs/thread_pool/src/: thread_pool.cpp
mhsupport/: CMakeLists.txt
mhsupport/libevent/: CMakeLists.txt
mhsupport/libevent/include/: LibEvent.h
mhsupport/libevent/src/: LibEvent.cpp
mhsupport/mhd/: CMakeLists.txt
mhsupport/mhd/include/: MHD.h
mhsupport/mhd/src/: MHD.cpp
mhsupport/microhttpd/: CMakeLists.txt
mhsupport/microhttpd/include/: MHD_config.h
mhsupport/microhttpd/src/: connection.c  daemon.c  internal.h  mhd_str.c
mhsupport/threads/: CMakeLists.txt  spinlock.hpp
mhsupport/xxhash/: CMakeLists.txt
version/: CMakeLists.txt  version.h.in
