add_subdirectory(meta_block)
add_subdirectory(meta_connections)
add_subdirectory(meta_constants)
add_subdirectory(meta_crypto)
add_subdirectory(meta_log)
add_subdirectory(meta_network)
add_subdirectory(meta_pool)
add_subdirectory(meta_transaction)
add_subdirectory(meta_chain)
add_subdirectory(meta_core)
add_subdirectory(meta_wallet)